# krx-quant-dataloader

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  tutorial.py
.cursor/rules/: experiment-driven-development.mdc
.specstory/history/: 2025-09-25_04-01Z-initial-tests-for-krx-quant-dataloader.md  2025-09-30_13-26Z-understanding-the-current-backend-task.md
config/: config.yaml  fields.yaml  settings.yaml  test_config.yaml
docs/vibe_coding/: architecture.md  (+3 more)
examples/: demo_dataloader.py
experiments/: exp_cumulative_adjustments.py  exp_liquidity_ranking.py  exp_samsung_stock_split_2018.py  experiments.md  stack_daily_quotes.py
log/: change_rates_adj_factor.csv  change_rates_snapshot.csv
scripts/: README.md  build_db.py  inspect_db.py
showcase/: demo_dataloader.py  demo_liquidity_ranking.py  demo_universe_builder.py  demo_universe_schema.py
tests/: README.md  conftest.py  test_adapter_registry.py  test_config_facade.py  test_cumulative_adjustments_live_smoke.py  test_cumulative_adjustments_unit.py  test_dataloader_live_smoke.py  test_dataloader_unit.py  test_field_mapper_unit.py  test_liquidity_ranking_live_smoke.py  test_liquidity_ranking_unit.py  test_live_smoke_krx.py  test_orchestrator_mechanics_unit.py  test_pipelines_snapshots_live_smoke.py  test_rate_limiter_unit.py  test_raw_client_live_smoke.py  test_raw_client_validation.py  test_storage_parquet_live_smoke.py  test_storage_query_live.py  test_transport_live_smoke.py  test_transport_policy_unit.py  test_universe_builder_unit.py  test_universe_schema_unit.py
tools/: extract_pykrx_endpoints.py
(+35 files in other folders)
