[project]
name = "krx-quant-dataloader"
version = "0.1.0"
description = ""
authors = [
    {name = "jaepil-choi.laptop",email = "chljeffreyz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "curl-cffi (>=0.13.0,<0.14.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "krx_quant_dataloader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
  "unit: fast, no network",
  "integration: may touch filesystem/network",
  "live: hits real KRX; run off-hours",
  "slow: >5s runtime"
]